bug 110800 - fire onChange when losing dropdown focus.  r=rods@netscape.com, sr=kin@netscape.com